# bot_whatsapp

./: .gitignore  .pre-commit-config.yaml  Enviar mensagens.bat  Enviar_Mensagens.ps1  pyproject.toml  requirements.txt
Clientes_Whatsapp/: clientes.xlsx
src/: app.py  message.txt  utils.py
